# raspberrypi-display

./: Cargo.toml  rpi-status-display.service
src/: dashboard.rs  main.rs
