[package]
name = "rpi_display"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.8.0"
embedded-graphics-simulator = { version = "0.5.0", optional = true }
rppal = { version = "0.14.1", features = ["hal"] }
ssd1306 = "0.8.0"
