[package]
name = "rpi_display"
version = "0.1.0"
authors = ["Fox Huston"]
edition = "2021"
license = "GPL3"
description = "Drives an SSD1306 OLED connected to a raspberry pi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default=[]
simulator = ["embedded-graphics-simulator"]

[dependencies]
embedded-graphics = "0.8.0"
embedded-graphics-simulator = { version = "0.5.0", optional = true }
local-ip-address = "0.5.3"
rppal = { version = "0.14.1", features = ["hal"] }
ssd1306 = "0.8.0"
string-builder = "0.2.0"
sysinfo = "0.29.2"
